# OThink-R1

./: .gitignore  README.md  download_scripts.sh  eval_arm.sh  eval_cp_router.sh  eval_deer.sh  eval_sb.sh  eval_sb_cp.sh  eval_sb_deer.sh  fix-code-gen.sh  fix-code.sh  kill-zombie-cuda.sh  livecode_deer.sh  livecode_standard.sh  merge_data.sh  note.md  othink_cli.py  othink_collect.py  othink_config.yaml  othink_report.py  pyproject.toml  run.sh  setup_bash.sh  setup_deer_dataset.sh  setup_eval.sh  setup_livecode.sh  test_aime.sh  test_cp_router.sh  test_deer.sh  test_lcb.sh  test_math.sh  test_official_lcb.sh  transfer.sh
OThinkR1Construct/core/: math_aime_processor.py
OThinkR1Training/: eval_all.py
OThinkR1Training/core/: math_aime_processor.py  test_processor.py
OThinkR1Training/scripts/: eval_math_aime.sh
baseline/cp-router/: README.md  requirements.txt  run_cp_router.py  run_logits_only.py  test_cp_router.py  test_cp_router.py.bak
baseline/deer/: check.py  check_fixed.py  vanilla_deer.py  vllm-deer-qwen3.py  vllm-deer.py
benchmark/livecodebench/: README.md  cp_router_lcb.py  cp_router_lcb_codegen.py  cp_router_lcb_stub.py  deer_lcb.py  download_data.sh  lcb_eval.py  run_cp_router.sh  run_cp_router_lcb.sh  run_deer.sh  run_deer_lcb.sh  run_lcb.sh  run_standard.sh
scripts/: 0-setup_create_env.sh  2-download_qwen_and_asdiv.sh  3-setup_math_aime.sh  test_aime.sh  test_inference.sh  test_math.sh
scripts/cp-router/: eval_cp_aime.sh  eval_cp_all.sh  eval_cp_asdiv.sh  eval_cp_commonsenseqa.sh  eval_cp_gsm8k.sh  eval_cp_math.sh  eval_cp_openbookqa.sh
(+66 files in other folders)
