[project]
name = "othink-r1"
version = "0.1.0"
description = "OThink-R1: Redundant Reasoning Pruning for LLM Training"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"

dependencies = [
    # Deep Learning Core
    "torch>=2.1.0",
    
    # Hugging Face Ecosystem
    "transformers>=4.40.0,<4.52.0",
    "trl>=0.12.0",
    "datasets>=2.18.0,<3.0.0",
    "accelerate>=0.30.0",
    "setuptools",
    # Inference Engine
    "vllm>=0.6.0,<0.8.0",
    
    # Configuration Management
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    
    # Experiment Tracking
    "wandb>=0.16.0",
    
    # Math Verification
    "math-verify>=0.5.0",
    
    # Data Processing
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    
    # API Client (for LLM Judge)
    "openai>=1.0.0",
    
    # Utilities
    "tqdm>=4.65.0",

    # DEER Baseline Dependencies
    "latex2sympy2>=1.0.0",
    "word2number>=1.1",
    "sympy>=1.12",
    "nltk>=3.8",
    "regex>=2023.0",
]

[tool.uv]
no-build-isolation = false

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true